<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText 
        android:id="@+id/text_username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/text_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/login"
        android:onClick="onLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:background="@drawable/qq_login"
        android:layout_width="76dp"
        android:layout_height="24dp"
        android:onClick="onQqLogin" />
</LinearLayout>
